--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/FeatureDevMap.FeatureDevMap
 EditorStartupMap=/Game/Maps/FeatureDevMap.FeatureDevMap
+GlobalDefaultGameMode=/Game/Blueprints/Core/Game/BP_BaseGameMode.BP_BaseGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
