Add attributes to Hero and Enemies

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,4 +1,7 @@
 
+[/Script/GameplayAbilities.AbilitySystemGlobals]
+bUseDebugTargetFromHud = true
+
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=724F53A74ECAC497BC68C3BEF3533B01
 CopyrightNotice=Fillipe Romero - All Rights Reserved
