Add SFX for when the Axe is hitting (using GameplayCue)

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,6 @@
-
 [/Script/GameplayAbilities.AbilitySystemGlobals]
 bUseDebugTargetFromHud = true
+GameplayCueNotifyPaths = /Game/Blueprints/AbilitySystem/GameplayCueNotifies
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=724F53A74ECAC497BC68C3BEF3533B01
