--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/FeatureDevMap.FeatureDevMap
-EditorStartupMap=/Game/Maps/FeatureDevMap.FeatureDevMap
+EditorStartupMap=/Game/Maps/GameModeTestMap.GameModeTestMap
 GlobalDefaultGameMode=/Game/Blueprints/Core/Game/BP_BaseGameMode.BP_BaseGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
