--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Maps/FeatureDevMap.FeatureDevMap
 EditorStartupMap=/Game/Maps/GameModeTestMap.GameModeTestMap
 GlobalDefaultGameMode=/Game/Blueprints/Core/Game/BP_BaseGameMode.BP_BaseGameMode_C
+GameInstanceClass=/Game/Blueprints/Core/Game/BP_WBGameInstance.BP_WBGameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
